syntax = "proto3";
package fx.staking.v1;

import "cosmos_proto/cosmos.proto";
import "google/protobuf/any.proto";

option go_package = "github.com/pundiai/fx-core/types/legacy";

message MsgGrantPrivilege {
  string validator_address = 1; // validator address
  string from_address = 2;      // from address
  google.protobuf.Any to_pubkey = 3
      [ (cosmos_proto.accepts_interface) =
            "cosmos.crypto.PubKey" ]; // to pub_key
  string signature = 4;               // signature
}

message MsgEditConsensusPubKey {
  string validator_address = 1;
  string from = 2;
  google.protobuf.Any pubkey = 3
      [ (cosmos_proto.accepts_interface) = "cosmos.crypto.PubKey" ];
}
